Pushing for logging purpuses, the logfile is ./Documentation/ToDo.txt